Tests/Fail/Test057.ML
(* Structure tests. *)
structure S: sig structure T: sig end end = struct end;
